Added code-along notes

--- a/phase_2/week_9/1_30/intermediate_sql_II_notes.ipynb
+++ b/phase_2/week_9/1_30/intermediate_sql_II_notes.ipynb
@@ -48,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test = \"hello\"\n",
     "\n",
@@ -184,8 +195,20 @@
    "outputs": [],
    "source": [
     "class Airline:\n",
-    "    def __init__(self):\n",
-    "        return "
+    "    # constructor\n",
+    "    # aka initializor \n",
+    "    def __init__(self, airlineid, airlinename, airlinecode):\n",
+    "        self.airlineid = airlineid\n",
+    "        self.airlinename = airlinename\n",
+    "        self.airliecode = airlinecode \n",
+    "\n",
+    "class Fellow:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "person1 = Fellow(\"Farukh\")\n",
+    "\n",
+    "airline_table = Airline([\"AA\", \"UAL\", \"DL\", \"WN\"], [\"American Airlines\", \"UAL\", \"DL\", \"WN\"], [\"AA\", \"UAL\", \"DL\", \"WN\"])"
    ]
   },
   {
