--- a/phase_2/week_9/1_31/intermediate_sql_II_notes.ipynb
+++ b/phase_2/week_9/1_31/intermediate_sql_II_notes.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# postgresql+psycopg2://user:password@hostname/database_name\n",
+    "# postgresql+psycopg2://postgres:@localhost/epi\n",
     "\n",
     "# the `create_engine` function prepares a connection to the database\n",
     "# should this info be public? \n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['economic', 'epi_country']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get entities from database (not neccessary!)\n",
     "Base.classes.keys()"
@@ -319,40 +330,14 @@
    "source": []
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have our dataframes prepared and, let's join our gdp dataframe onto each geographic dataframe so that we later perform more EDA (exploratory data analysis).\n",
-    "\n",
-    "What kind of join should we be doing? On which column should we be joining?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Next, let's plot the relationships between attributes such as `WATER_H` and `VALUE`, or `AIR_H` and `VALUE`. What do you notice about the trend of data?\n",
-    "\n",
-    "Is the distribution highly variable? Is there a trend in the data?\n",
-    "\n",
-    "Which other columns can we analyze?"
+    "# be sure to dispose your engine after completing your analysis!\n",
+    "engine.dispose()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -371,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
