Added more code

--- a/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
+++ b/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
@@ -15,7 +15,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine, func\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "import pandas as pd\n",
+    "\n",
+    "# postgresql+psycopg2://postgres:@localhost/epi\n",
+    "\n",
+    "# the `create_engine` function prepares a connection to the database\n",
+    "# should this info be public? \n",
+    "engine = create_engine('postgresql+psycopg2://postgres:password@localhost:5434/epi')\n",
+    "\n",
+    "# this object will automatically map our db entity into a Python class\n",
+    "Base = automap_base()\n",
+    "\n",
+    "# get db into automapper\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "\n",
+    "# save classes as variables, prepare classes\n",
+    "epi_country = Base.classes.epi_country\n",
+    "gdp = Base.classes.economic\n",
+    "\n",
+    "# query our database (pull data and save into objects)\n",
+    "session = Session(engine)\n",
+    "engine.dispose()\n",
+    "\n",
+    "results_cb = session.query(epi_country.country, epi_country.air_h, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion).filter(epi_country.geo_subregion == \"Caribbean\").all()\n",
+    "results_sa = session.query(epi_country.country, epi_country.air_h, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion).filter(epi_country.geo_subregion == \"South East Asia\").all()\n",
+    "results_ce = session.query(epi_country.country, epi_country.air_h, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion).filter(epi_country.geo_subregion == \"Central Europe\").all()\n",
+    "\n",
+    "gdp_country = session.query(gdp.country, gdp.subject, gdp.value)\n",
+    "rows_gdp = gdp_country.all()\n",
+    "\n",
+    "gdp_df = pd.DataFrame(rows_gdp, columns=['country', 'subject', 'value'])\n",
+    "\n",
+    "epi_cb = pd.DataFrame(results_cb, columns=['country', 'air_h', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])\n",
+    "epi_sa = pd.DataFrame(results_sa, columns=['country', 'air_h', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])\n",
+    "epi_ce = pd.DataFrame(results_ce, columns=['country', 'air_h', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])"
+   ]
   },
   {
    "attachments": {},
@@ -32,7 +70,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# first filter your df to only include \"subject\" == \"Gross Domestic Product (GDP); millions\"\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
