--- a/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb
+++ b/phase_2/week_9/Lab/intermediate_sql_lab_notes.ipynb
@@ -4968,7 +4968,277 @@
    "source": [
     "As it applies to pandas, we can actually convert an entire dataframe into a sql table via the following command.\n",
     "\n",
-    "`data` in this context is a dataframe"
+    "`data` in this context is the HDI dataframe.\n",
+    "\n",
+    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_sql.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>HDI Rank</th>\n",
+       "      <th>HDI</th>\n",
+       "      <th>Life expectancy</th>\n",
+       "      <th>Mean years of schooling</th>\n",
+       "      <th>Gross national income (GNI) per capita</th>\n",
+       "      <th>GNI per capita rank minus HDI rank</th>\n",
+       "      <th>Change in HDI rank 2010-2015</th>\n",
+       "      <th>Average annual HDI growth 1990-2000</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Coefficient of human inequality</th>\n",
+       "      <th>Inequality in life expectancy (%) 2010-2015</th>\n",
+       "      <th>Inequality-adjusted life expectancy index</th>\n",
+       "      <th>Inequality in education(%)</th>\n",
+       "      <th>Inequality-adjusted education index</th>\n",
+       "      <th>Inequality in income (%)</th>\n",
+       "      <th>Inequality-adjusted income index</th>\n",
+       "      <th>Income inequality (Quintile ratio) 2010-2015</th>\n",
+       "      <th>Income inequality (Palma ratio) 2010-2015</th>\n",
+       "      <th>Income inequality (Gini coefficient) 2010-2015</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.949</td>\n",
+       "      <td>81.7</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>67614.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.918</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.894</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>0.882</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>25.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.939</td>\n",
+       "      <td>82.5</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>42822.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>0.921</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.921</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>0.753</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>34.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.939</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>56364.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>0.934</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>0.840</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>0.806</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>31.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.926</td>\n",
+       "      <td>81.1</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>0.905</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.891</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>0.787</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>30.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.925</td>\n",
+       "      <td>80.4</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>44519.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>0.894</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.896</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>0.789</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>29.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 81 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id      Country  HDI Rank    HDI  Life expectancy  Mean years of schooling  \\\n",
+       "0   1       Norway       1.0  0.949             81.7                     12.7   \n",
+       "1   2    Australia       2.0  0.939             82.5                     13.2   \n",
+       "2   3  Switzerland       2.0  0.939             83.1                     13.4   \n",
+       "3   4      Germany       4.0  0.926             81.1                     13.2   \n",
+       "4   5      Denmark       5.0  0.925             80.4                     12.7   \n",
+       "\n",
+       "   Gross national income (GNI) per capita  GNI per capita rank minus HDI rank  \\\n",
+       "0                                 67614.0                                 5.0   \n",
+       "1                                 42822.0                                19.0   \n",
+       "2                                 56364.0                                 7.0   \n",
+       "3                                 45000.0                                13.0   \n",
+       "4                                 44519.0                                13.0   \n",
+       "\n",
+       "   Change in HDI rank 2010-2015  Average annual HDI growth 1990-2000  ...  \\\n",
+       "0                           0.0                                 0.77  ...   \n",
+       "1                           1.0                                 0.38  ...   \n",
+       "2                           0.0                                 0.67  ...   \n",
+       "3                           0.0                                 0.71  ...   \n",
+       "4                           2.0                                 0.76  ...   \n",
+       "\n",
+       "   Coefficient of human inequality  \\\n",
+       "0                              5.4   \n",
+       "1                              8.0   \n",
+       "2                              8.4   \n",
+       "3                              7.0   \n",
+       "4                              7.0   \n",
+       "\n",
+       "   Inequality in life expectancy (%) 2010-2015  \\\n",
+       "0                                          3.3   \n",
+       "1                                          4.3   \n",
+       "2                                          3.8   \n",
+       "3                                          3.7   \n",
+       "4                                          3.8   \n",
+       "\n",
+       "   Inequality-adjusted life expectancy index  Inequality in education(%)  \\\n",
+       "0                                      0.918                         2.4   \n",
+       "1                                      0.921                         1.9   \n",
+       "2                                      0.934                         5.7   \n",
+       "3                                      0.905                         2.6   \n",
+       "4                                      0.894                         3.0   \n",
+       "\n",
+       "   Inequality-adjusted education index  Inequality in income (%)  \\\n",
+       "0                                0.894                      10.4   \n",
+       "1                                0.921                      17.7   \n",
+       "2                                0.840                      15.7   \n",
+       "3                                0.891                      14.8   \n",
+       "4                                0.896                      14.3   \n",
+       "\n",
+       "   Inequality-adjusted income index  \\\n",
+       "0                             0.882   \n",
+       "1                             0.753   \n",
+       "2                             0.806   \n",
+       "3                             0.787   \n",
+       "4                             0.789   \n",
+       "\n",
+       "   Income inequality (Quintile ratio) 2010-2015  \\\n",
+       "0                                           3.8   \n",
+       "1                                           6.0   \n",
+       "2                                           4.9   \n",
+       "3                                           4.6   \n",
+       "4                                           4.5   \n",
+       "\n",
+       "   Income inequality (Palma ratio) 2010-2015  \\\n",
+       "0                                        0.9   \n",
+       "1                                        1.4   \n",
+       "2                                        1.2   \n",
+       "3                                        1.1   \n",
+       "4                                        1.0   \n",
+       "\n",
+       "   Income inequality (Gini coefficient) 2010-2015  \n",
+       "0                                            25.9  \n",
+       "1                                            34.9  \n",
+       "2                                            31.6  \n",
+       "3                                            30.1  \n",
+       "4                                            29.1  \n",
+       "\n",
+       "[5 rows x 81 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "hdi = pd.read_csv(\"data/HDI.csv\")\n",
+    "hdi.head()"
    ]
   },
   {
@@ -4977,7 +5247,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_sql('loan_data', engine)"
+    "hdi.to_sql('human_dev', engine)\n",
+    "\n",
+    "query = engine.execute(\"SELECT * FROM human_dev\")\n",
+    "\n",
+    "rows = query.fetchall()\n",
+    "columns = query.keys()\n",
+    "\n",
+    "columns"
    ]
   },
   {
