Added more practice

--- a/review/tech_interviews/two-pointer.ipynb
+++ b/review/tech_interviews/two-pointer.ipynb
@@ -164,6 +164,22 @@
     "end = time.time()\n",
     "print(\"Time for two-pointers\", end - start)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More Patterns, More Problems\n",
+    "\n",
+    "Problems that can be solved using two-pointer pattern.\n",
+    "\n",
+    "* [Squares of Sorted Array](https://leetcode.com/problems/squares-of-a-sorted-array)\n",
+    "* [Distance to Character](https://leetcode.com/problems/shortest-distance-to-a-character/)\n",
+    "* [Move Zeroes](https://leetcode.com/problems/move-zeroes/)\n",
+    "\n",
+    "Comprehensive list here: https://leetcode.com/tag/two-pointers/"
+   ]
   }
  ],
  "metadata": {
