Added two-pointer runtime

--- a/review/tech_interviews/two-pointer.ipynb
+++ b/review/tech_interviews/two-pointer.ipynb
@@ -19,17 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def brute_pairs(lst, target):\n",
-    "    pairs = []\n",
     "    for i in range(len(lst)):\n",
     "        for j in range(i, len(lst)):\n",
     "            if lst[i] + lst[j] == target:\n",
-    "                pairs.append([lst[i], lst[j]])\n",
-    "    return pairs"
+    "                return [lst[i], lst[j]]\n",
+    "    return -1, 1"
    ]
   },
   {
@@ -79,12 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def two_pointers(lst, target):\n",
-    "    pairs = []\n",
     "    start = 0\n",
     "    end = len(lst) - 1\n",
     "\n",
@@ -93,12 +91,12 @@
     "    while end > start:\n",
     "        result = lst[start] + lst[end]\n",
     "        if result == target:\n",
-    "            pairs.append([lst[start], lst[end]])\n",
+    "            return [lst[start], lst[end]]\n",
     "        elif result < target:\n",
     "            start += 1\n",
     "        else:\n",
     "            end -= 1\n",
-    "    return pairs"
+    "    return -1, 1"
    ]
   },
   {
@@ -146,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time for brute 0.02764439582824707\n",
+      "Time for two-pointers 0.012653350830078125\n"
+     ]
+    }
+   ],
    "source": [
     "import time \n",
     "\n",
@@ -159,7 +166,7 @@
     "print(\"Time for brute\", end - start)\n",
     "\n",
     "start = time.time()\n",
-    "for i in range(10000):\n",
+    "for j in range(10000):\n",
     "    two_pointers([4, 3, 6, 1, 2], 3)\n",
     "end = time.time()\n",
     "print(\"Time for two-pointers\", end - start)"
