Added tableau exercise

--- a/phase_2/phase_10/2_6/intro_to_tableau_exercise.ipynb
+++ b/phase_2/phase_10/2_6/intro_to_tableau_exercise.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Choose from one of the datasets listed below:\n",
     "\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
+    "* [titanic dataset](https://www.kaggle.com/competitions/titanic/data?select=train.csv)\n",
+    "* [us census & voting](https://www.kaggle.com/datasets/minhbtnguyen/us-census-for-election-predictions-20002020)\n",
+    "* [us real-estate](https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/data?select=train.csv)\n",
+    "\n",
+    "(or any other dataset that you'd like to explore)\n",
     "\n",
     "Using this dataset, download it to your folder & read it into this jupyter notebook using pandas.\n",
     "\n",
