--- a/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
+++ b/phase_2/week_9/1_31/intermediate_sql_coding_exercise.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,31 +39,139 @@
     "\n",
     "# query our database (pull data and save into objects)\n",
     "session = Session(engine)\n",
-    "engine.dispose()\n",
     "\n",
-    "results_epi = session.query(epi_country.country, epi_country.air_h, epi_country.population07, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion).all()\n",
+    "results_epi = session.query(epi_country.country, epi_country.air_h, epi_country.population07, epi_country.water_h, epi_country.biodiversity, epi_country.fisheries, epi_country.geo_subregion)\n",
     "\n",
     "gdp_country = session.query(gdp.country, gdp.subject, gdp.value)\n",
+    "\n",
+    "rows_epi = results_epi.all()\n",
     "rows_gdp = gdp_country.all()\n",
     "\n",
     "gdp_df = pd.DataFrame(rows_gdp, columns=['country', 'subject', 'value'])\n",
     "\n",
-    "epi_df = pd.DataFrame(results_epi, columns=['country', 'air_h', 'population07', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have our dataframes prepared and, let's join our gdp dataframe onto each geographic dataframe so that we can get the GDP information of each country.\n",
+    "epi_df = pd.DataFrame(rows_epi, columns=['country', 'air_h', 'population07', 'water_h', 'biodiversity', 'fisheries', 'geo_subregion'])\n",
     "\n",
-    "What kind of join should we be doing? On which column should we be joining?"
+    "engine.dispose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>air_h</th>\n",
+       "      <th>population07</th>\n",
+       "      <th>water_h</th>\n",
+       "      <th>biodiversity</th>\n",
+       "      <th>fisheries</th>\n",
+       "      <th>geo_subregion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>97.37</td>\n",
+       "      <td>310997.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>68.86</td>\n",
+       "      <td>66.46</td>\n",
+       "      <td>Western Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>90.96</td>\n",
+       "      <td>7550077.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>Western Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>77.62</td>\n",
+       "      <td>4462192.6</td>\n",
+       "      <td>96.03</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>99.12</td>\n",
+       "      <td>Meso America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>97.37</td>\n",
+       "      <td>9148092.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>61.04</td>\n",
+       "      <td>66.52</td>\n",
+       "      <td>Western Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>97.37</td>\n",
+       "      <td>4709153.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>46.63</td>\n",
+       "      <td>72.40</td>\n",
+       "      <td>Western Europe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country  air_h  population07  water_h  biodiversity  fisheries  \\\n",
+       "0      Iceland  97.37      310997.0   100.00         68.86      66.46   \n",
+       "1  Switzerland  90.96     7550077.0   100.00        100.00      -1.00   \n",
+       "2   Costa Rica  77.62     4462192.6    96.03         73.40      99.12   \n",
+       "3       Sweden  97.37     9148092.0   100.00         61.04      66.52   \n",
+       "4       Norway  97.37     4709153.0   100.00         46.63      72.40   \n",
+       "\n",
+       "    geo_subregion  \n",
+       "0  Western Europe  \n",
+       "1  Western Europe  \n",
+       "2    Meso America  \n",
+       "3  Western Europe  \n",
+       "4  Western Europe  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epi_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +198,6 @@
        "      <th>country</th>\n",
        "      <th>subject</th>\n",
        "      <th>value</th>\n",
-       "      <th>air_h</th>\n",
-       "      <th>population07</th>\n",
-       "      <th>water_h</th>\n",
-       "      <th>biodiversity</th>\n",
-       "      <th>fisheries</th>\n",
-       "      <th>geo_subregion</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -103,83 +205,76 @@
        "      <th>0</th>\n",
        "      <td>Australia</td>\n",
        "      <td>Gross Domestic Product (GDP); millions</td>\n",
-       "      <td>980319.112</td>\n",
-       "      <td>97.37</td>\n",
-       "      <td>21015000.0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>77.86</td>\n",
-       "      <td>96.53</td>\n",
-       "      <td>Australia and New Zealand</td>\n",
+       "      <td>980319.112000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Gross Domestic Product (GDP); millions</td>\n",
-       "      <td>408920.991</td>\n",
-       "      <td>84.15</td>\n",
-       "      <td>8315427.0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>-1.00</td>\n",
-       "      <td>Western Europe</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>44495.643210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>Gross Domestic Product (GDP); millions</td>\n",
-       "      <td>488282.616</td>\n",
-       "      <td>94.30</td>\n",
-       "      <td>10625700.0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>20.20</td>\n",
-       "      <td>48.74</td>\n",
-       "      <td>Western Europe</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>GDP per hour worked</td>\n",
+       "      <td>49.886548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Gross Domestic Product (GDP); millions</td>\n",
-       "      <td>1433984.771</td>\n",
-       "      <td>97.37</td>\n",
-       "      <td>32976000.0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>61.91</td>\n",
-       "      <td>33.77</td>\n",
-       "      <td>North America</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>GDP per person employed</td>\n",
+       "      <td>87558.347450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Czech Republic</td>\n",
+       "      <td>Austria</td>\n",
        "      <td>Gross Domestic Product (GDP); millions</td>\n",
-       "      <td>328712.910</td>\n",
-       "      <td>96.14</td>\n",
-       "      <td>10334160.0</td>\n",
-       "      <td>99.44</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>-1.00</td>\n",
-       "      <td>Central Europe</td>\n",
+       "      <td>408920.991000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          country                                 subject        value  air_h  \\\n",
-       "0       Australia  Gross Domestic Product (GDP); millions   980319.112  97.37   \n",
-       "1         Austria  Gross Domestic Product (GDP); millions   408920.991  84.15   \n",
-       "2         Belgium  Gross Domestic Product (GDP); millions   488282.616  94.30   \n",
-       "3          Canada  Gross Domestic Product (GDP); millions  1433984.771  97.37   \n",
-       "4  Czech Republic  Gross Domestic Product (GDP); millions   328712.910  96.14   \n",
-       "\n",
-       "   population07  water_h  biodiversity  fisheries              geo_subregion  \n",
-       "0    21015000.0   100.00         77.86      96.53  Australia and New Zealand  \n",
-       "1     8315427.0   100.00        100.00      -1.00             Western Europe  \n",
-       "2    10625700.0   100.00         20.20      48.74             Western Europe  \n",
-       "3    32976000.0   100.00         61.91      33.77              North America  \n",
-       "4    10334160.0    99.44        100.00      -1.00             Central Europe  "
+       "     country                                 subject          value\n",
+       "0  Australia  Gross Domestic Product (GDP); millions  980319.112000\n",
+       "1  Australia              GDP per head of population   44495.643210\n",
+       "2  Australia                     GDP per hour worked      49.886548\n",
+       "3  Australia                 GDP per person employed   87558.347450\n",
+       "4    Austria  Gross Domestic Product (GDP); millions  408920.991000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our dataframes prepared and, let's join our gdp dataframe onto each geographic dataframe so that we can get the GDP information of each country.\n",
+    "\n",
+    "What kind of join should we be doing? On which column should we be joining?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.5"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,14 +283,12 @@
     "# first filter your df to only include \"subject\" == \"Gross Domestic Product (GDP); millions\"\n",
     "#gdp_df[\"subject\"] == \"Gross Domestic Product (GDP); millions\"\n",
     "\n",
-    "gdp_mill = gdp_df.groupby(\"subject\").get_group(\"Gross Domestic Product (GDP); millions\")\n",
+    "# gdp_mill = gdp_df.groupby(\"subject\").get_group(\"Gross Domestic Product (GDP); millions\")\n",
     "\n",
     "# join epi_ce and gdp_mill\n",
-    "gdp_epi = gdp_mill.merge(epi_df, how=\"left\", on=\"country\")\n",
+    "gdp_epi = gdp_df.merge(epi_df, how=\"left\", on=\"country\")\n",
     "\n",
-    "gdp_epi.dropna(inplace=True)\n",
-    "\n",
-    "gdp_epi.head()"
+    "gdp_epi.dropna(inplace=True)"
    ]
   },
   {
