--- a/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
+++ b/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
@@ -257,7 +257,7 @@
     "conn = psycopg2.connect(**params)\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute(\"SELECT * FROM real_flight \")\n",
+    "cursor.execute(\"SELECT * FROM real_flight\")\n",
     "rows = cursor.fetchall()\n",
     "print(rows)\n",
     "\n",
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
