--- a/phase_2/week_10/2_6/intro_to_tableau_exercise.ipynb
+++ b/phase_2/week_10/2_6/intro_to_tableau_exercise.ipynb
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "## CHALLENGE\n",
-    "# if your data entails `FIPS` or `lat` `long` data, create a chloroplhet map using plotly\n",
+    "# if your data entails `FIPS` or `lat` `long` data, create a chloropleth map using plotly\n",
     "\n",
     "import plotly.io as pio\n",
     "pio.renderers.default='notebook'\n",
